support sonatype snapshots